--- a/exercises/03_03_ex_16.tex
+++ b/exercises/03_03_ex_16.tex
@@ -2,13 +2,13 @@
 }
 {domain=$(-\infty,\infty)$
 
-c.p. at $c=\frac16(-1\pm\sqrt{7})$; 
+c.p. at $ c=\frac16\left(-1\pm\sqrt{7}\right)$; 
 
-decreasing on $(\frac16(-1-\sqrt{7}),\frac16(-1+\sqrt{7})))$;
+decreasing on $ \left(\frac16\left(-1-\sqrt{7}\right),\frac16\left(-1+\sqrt{7}\right)\right)$;
 
-increasing on $(-\infty,\frac16(-1-\sqrt{7})) \cup (\frac16(-1+\sqrt{7}),\infty)$;
+increasing on $ \left(-\infty,\frac16\left(-1-\sqrt{7}\right)\right) \cup \left(\frac16\left(-1+\sqrt{7}\right),\infty\right)$;
 
-rel. min at $x=\frac16(-1+\sqrt{7})$;
+rel. min at $ x=\frac16\left(-1+\sqrt{7}\right)$;
 
-rel. max at $x=\frac16(-1-\sqrt{7})$.
+rel. max at $ x=\frac16\left(-1-\sqrt{7}\right)$.
 }
