--- a/exercises/03_03_ex_22.tex
+++ b/exercises/03_03_ex_22.tex
@@ -1,6 +1,6 @@
 {$\ds f(x) =\sin x\cos x$ on $(-\pi,\pi)$.
 }
-{domain=$(-\infty,\infty)$
+{domain=$(-\pi,\pi)$
 
 c.p. at $c=-3\pi/4,-\pi/4,\pi/4,3\pi/4$; 
 
