--- a/text/03_Increasing_Decreasing.tex
+++ b/text/03_Increasing_Decreasing.tex
@@ -101,11 +101,16 @@ In Section \ref{sec:extreme_values} we learned the definition of relative maxima
 %\small
 %\setboxwidth{100pt}
 \theorem{thm:first_der}{First Derivative Test}%
-{Let $f$ be differentiable on $I$ and let $c$ be a critical number in $I$.\index{First Derivative Test}\index{derivative!First Deriv. Test}\index{extrema!and First Deriv. Test}\index{maximum!and First Deriv. Test}\index{minimum!and First Deriv. Test}
+{For a function $f$ and interval $I$, suppose\index{First Derivative Test}\index{derivative!First Deriv. Test}\index{extrema!and First Deriv. Test}\index{maximum!and First Deriv. Test}\index{minimum!and First Deriv. Test}
+\begin{itemize}
+\item $f$ is continuous on $I$,
+\item $c$ is a critical number in $I$,
+\item $f$ is differentiable on $I$, except possibly at $c$.
+\end{itemize}
 \begin{enumerate}
 \item		If the sign of \fp\ switches from positive to negative at $c$, then $f(c)$ is a relative maximum of $f$.
 \item		If the sign of \fp\ switches from negative to positive at $c$, then $f(c)$ is a relative minimum of $f$.
-\item		If the sign of \fp\ does not change at $c$, then $f(c)$ is not a relative extrema of $f$.
+\item		If the sign of \fp\ does not change at $c$, then $f(c)$ is not a relative extremum of $f$.
 \end{enumerate}
 }
 \normalsize
