--- a/exercises/03_03_ex_19.tex
+++ b/exercises/03_03_ex_19.tex
@@ -8,6 +8,6 @@ decreasing on $(-\infty,-1)\cup (-1,0)$;
 
 increasing on $(0,1)\cup (1,\infty)$;
 
-rel. min at $x=0$;
+rel. min at $x=0$.
 %rel. max at $x=1$.
 }
