--- a/exercises/03_03_exset_02.tex
+++ b/exercises/03_03_exset_02.tex
@@ -4,7 +4,7 @@
 	\item	[(a)] Give the domain of $f$.
 	\item	[(b)] Find the critical numbers of $f$.
 	\item	[(c)] Create a number line to determine the intervals on which $f$ is increasing and decreasing.
-	\item	[(d)] Use the First Derivative Test to determine whether each critical point is a relative maximum, minimum, or neither.
+	\item	[(d)] Use the First Derivative Test to determine whether each critical point is a relative maximum, minimum, or neither.  (Only list the $x$-coordinates of the extrema.)
 	\end{enumerate}
 }
 \exinput{exercises/03_03_ex_14}
@@ -15,5 +15,10 @@
 \exinput{exercises/03_03_ex_19}
 \exinput{exercises/03_03_ex_20}
 \exinput{exercises/03_03_ex_21}
+\exinput{exercises/03_03_ex_30}
+\exinput{exercises/03_03_ex_31}
+\exinput{exercises/03_03_ex_32}
+\exinput{exercises/03_03_ex_33}
+\exinput{exercises/03_03_ex_34}
 \exinput{exercises/03_03_ex_22}
 \exinput{exercises/03_03_ex_23}
