Sec 3.4 edits - added inconclusive f''(c)=0 case to 2nd deriv test, and added 11 new problems

--- a/exercises/03_04_exset_02.tex
+++ b/exercises/03_04_exset_02.tex
@@ -17,4 +17,7 @@
 \exinput{exercises/03_04_ex_25}
 \exinput{exercises/03_04_ex_26}
 \exinput{exercises/03_04_ex_27}
+\exinput{exercises/03_04_ex_27a}
+\exinput{exercises/03_04_ex_27b}
+\exinput{exercises/03_04_ex_27c}
 \exinput{exercises/03_04_ex_28}
