--- a/exercises/03_04_exset_03.tex
+++ b/exercises/03_04_exset_03.tex
@@ -13,4 +13,7 @@
 \exinput{exercises/03_04_ex_38}
 \exinput{exercises/03_04_ex_39}
 \exinput{exercises/03_04_ex_40}
+\exinput{exercises/03_04_ex_40a}
+\exinput{exercises/03_04_ex_40b}
+\exinput{exercises/03_04_ex_40c}
 \exinput{exercises/03_04_ex_41}
