--- a/exercises/03_04_exset_04.tex
+++ b/exercises/03_04_exset_04.tex
@@ -13,4 +13,7 @@
 \exinput{exercises/03_04_ex_51}
 \exinput{exercises/03_04_ex_52}
 \exinput{exercises/03_04_ex_53}
+\exinput{exercises/03_04_ex_53a}
+\exinput{exercises/03_04_ex_53b}
+\exinput{exercises/03_04_ex_53c}
 \exinput{exercises/03_04_ex_54}
