--- a/exercises/03_04_exercises.tex
+++ b/exercises/03_04_exercises.tex
@@ -3,9 +3,11 @@
 \exinput{exercises/03_04_ex_02}
 \exinput{exercises/03_04_ex_03}
 \exinput{exercises/03_04_ex_04}
+\exinput{exercises/03_04_ex_55}
+\exinput{exercises/03_04_ex_56}
 \printproblems
 \exsetinput{exercises/03_04_exset_01}
-\ifthenelse{\boolean{printquestions}}{\columnbreak}{}
+%\ifthenelse{\boolean{printquestions}}{\columnbreak}{}
 \exsetinput{exercises/03_04_exset_02}
 \exsetinput{exercises/03_04_exset_03}
 \exsetinput{exercises/03_04_exset_04}
