Added a 2.6 problem, and made some small fixes in 4.1

--- a/exercises/02_06_ex_20.tex
+++ b/exercises/02_06_ex_20.tex
@@ -1,4 +1,4 @@
-{Show that $\ds \frac{dy}{dx}$ is the same for each of the following implicitly defined functions.
+{Show that $\ds \frac{dy}{dx}$ is the same for each of the following implicitly defined equations.
 \begin{enumerate}
 \item		$xy=1$
 \item		$x^2y^2=1$
