--- a/exercises/02_06_exercises.tex
+++ b/exercises/02_06_exercises.tex
@@ -10,6 +10,7 @@
 \exsetinput{exercises/02_06_exset_03}
 \exsetinput{exercises/02_06_exset_04}
 \exsetinput{exercises/02_06_exset_05}
+\exinput{exercises/02_06_ex_42}
 %\exinput{exercises/02_05_ex_31}
 %\exinput{exercises/02_05_ex_32}
 %\exsetinput{exercises/02_03_exset_03}
