--- a/exercises/04_02_ex_11.tex
+++ b/exercises/04_02_ex_11.tex
@@ -1,4 +1,4 @@
-{An inverted cylindrical cone, 20ft deep and 10ft across at the top, is being filled with water at a rate of 10ft$^3$/min. At what rate is the water rising in the tank when the depth of the water is:
+{An inverted circular cone, 20ft deep and 10ft across at the top, is being filled with water at a rate of 10ft$^3$/min. At what rate is the water rising in the tank when the depth of the water is:
 \begin{enumerate}
 \item	1 foot?
 \item	10 feet?
