--- a/text/01_Infinite_Limits.tex
+++ b/text/01_Infinite_Limits.tex
@@ -80,7 +80,7 @@ With a little cleverness, one can come up $0/0$ expressions which have a limit o
 A key concept to understand is that such limits do not really return $0/0$. Rather, keep in mind that we are taking \textit{limits}. What is really happening is that the numerator is shrinking to 0 while the denominator is also shrinking to 0. The respective rates at which they do this are very important and determine the actual value of the limit.
 
 An indeterminate form indicates that one needs to do more work in order to compute the limit. That work may be algebraic (such as factoring and canceling) or it may require a tool such as the Squeeze Theorem. %algebraically manipulate the expression in some way in order to compute the limit.  It may also indicate that you need a completely different approach, like with $(\sin x)/x$. 
- In a later section we will learn a technique called l'Hospital's Rule that provides another way to handle indeterminate forms.  
+ In a later section we will learn a technique called l'H\^{o}pital's Rule that provides another way to handle indeterminate forms.  
  
 Some other common indeterminate forms are $\infty-\infty$, $\infty\cdot 0$, $\infty/\infty$, $0^0$, $\infty^0$ and $1^{\infty}$. Again, keep in mind that these are the ``blind'' results of evaluating a limit, and each, in and of itself, has no meaning. The expression $\infty-\infty$ does not really mean ``subtract infinity from infinity.'' Rather, it means ``One quantity is subtracted from the other, but both are growing without bound.'' What is the result? It is possible to get every value between $-\infty$ and $\infty$
 
@@ -95,7 +95,7 @@ These are just two quick examples of why we are interested in limits. Many stude
 
 %\end{document}
 
-%Do both limits to infinity, limits resulting in “infinity”.
+%Do both limits to infinity, limits resulting in ï¿½infinityï¿½.
 %Define more clearly indeterminate form.
 %Thm: Rules about limits involving infinity
 %Thm: Something about the limits as x ? 8 and rational functions? 
