Added problems mostly to 4.2, also added a DSC-themed related rates problem

--- a/exercises/06_06_exset_01.tex
+++ b/exercises/06_06_exset_01.tex
@@ -1,36 +1,53 @@
 {\noindent In Exercises}
-{, evaluate the given limit.}
+{, evaluate the given limit.  Note that for some of these, l'H\^{o}pital's Rule is not to be used.}
 \exinput{exercises/06_06_ex_08}
+\exinput{exercises/06_06_ex_54}
 \exinput{exercises/06_06_ex_09}
+\exinput{exercises/06_06_ex_53}
 \exinput{exercises/06_06_ex_10}
+\exinput{exercises/06_06_ex_56}
 \exinput{exercises/06_06_ex_11}
 \exinput{exercises/06_06_ex_12}
 \exinput{exercises/06_06_ex_13}
 \exinput{exercises/06_06_ex_14}
 \exinput{exercises/06_06_ex_15}
+\exinput{exercises/06_06_ex_64}
+\exinput{exercises/06_06_ex_65}
 \exinput{exercises/06_06_ex_16}
 \exinput{exercises/06_06_ex_17}
 \exinput{exercises/06_06_ex_18}
+\exinput{exercises/06_06_ex_58}
+\exinput{exercises/06_06_ex_59}
 \exinput{exercises/06_06_ex_19}
 \exinput{exercises/06_06_ex_20}
 \exinput{exercises/06_06_ex_21}
 \exinput{exercises/06_06_ex_22}
 \exinput{exercises/06_06_ex_23}
+\exinput{exercises/06_06_ex_62}
 \exinput{exercises/06_06_ex_24}
 \exinput{exercises/06_06_ex_25}
+\exinput{exercises/06_06_ex_63}
 \exinput{exercises/06_06_ex_26}
 \exinput{exercises/06_06_ex_27}
 \exinput{exercises/06_06_ex_28}
+\exinput{exercises/06_06_ex_66}
+\exinput{exercises/06_06_ex_60}
+\exinput{exercises/06_06_ex_61}
 \exinput{exercises/06_06_ex_29}
 \exinput{exercises/06_06_ex_30}
+\exinput{exercises/06_06_ex_71}
 \exinput{exercises/06_06_ex_52}
 \exinput{exercises/06_06_ex_31}
 \exinput{exercises/06_06_ex_32}
 \exinput{exercises/06_06_ex_33}
 \exinput{exercises/06_06_ex_34}
+\exinput{exercises/06_06_ex_55}
 \exinput{exercises/06_06_ex_35}
+\exinput{exercises/06_06_ex_67}
+\exinput{exercises/06_06_ex_68}
 \exinput{exercises/06_06_ex_36}
 \exinput{exercises/06_06_ex_37}
+\exinput{exercises/06_06_ex_69}
 \exinput{exercises/06_06_ex_38}
 \exinput{exercises/06_06_ex_39}
 \exinput{exercises/06_06_ex_40}
@@ -38,6 +55,7 @@
 \exinput{exercises/06_06_ex_42}
 \exinput{exercises/06_06_ex_43}
 \exinput{exercises/06_06_ex_44}
+\exinput{exercises/06_06_ex_70}
 \exinput{exercises/06_06_ex_45}
 \exinput{exercises/06_06_ex_46}
 \exinput{exercises/06_06_ex_47}
@@ -45,3 +63,4 @@
 \exinput{exercises/06_06_ex_49}
 \exinput{exercises/06_06_ex_50}
 \exinput{exercises/06_06_ex_51}
+\exinput{exercises/06_06_ex_57}
