--- a/exercises/04_02_exercises.tex
+++ b/exercises/04_02_exercises.tex
@@ -17,6 +17,7 @@
 \exinput{exercises/04_02_ex_13}
 \exinput{exercises/04_02_ex_14}
 \exinput{exercises/04_02_ex_15}
+\exinput{exercises/04_02_ex_16}
 %\printreview
 %\exinput{exercises/03_03_ex_24}
 %\exinput{exercises/03_03_ex_25}
