--- a/exercises/04_04_ex_35.tex
+++ b/exercises/04_04_ex_35.tex
@@ -1,4 +1,4 @@
-{\label{exer:04_04_ex_35} The length $l$ of a long wall is to be approximated. The angle $\theta$, as shown in the diagram (not to scale), is measured to be $85.2^\circ$, accurate to $1^\circ$. Assume that the triangle formed is a right triangle.
+{\label{exer:04_04_ex_35} The length $\ell$ of a long wall is to be approximated. The angle $\theta$, as shown in the diagram (not to scale), is measured to be $85.2^\circ$, accurate to $1^\circ$. Assume that the triangle formed is a right triangle.
 
 \begin{minipage}{\linewidth}
 \centering
@@ -10,7 +10,7 @@
 \end{minipage}
 
 \begin{enumerate}
-\item		What is the measured length $l$ of the wall?
+\item		What is the measured length $\ell$ of the wall?
 \item		What is the propagated error? 
 \item		What is the percent error?
 \end{enumerate}
