--- a/exercises/06_06_exercises.tex
+++ b/exercises/06_06_exercises.tex
@@ -7,6 +7,7 @@
 \exinput{exercises/06_06_ex_06}
 \exinput{exercises/06_06_ex_07}
 \printproblems
+\exsetinput{exercises/06_06_exset_02}
 \exsetinput{exercises/06_06_exset_01}
 %\exsetinput{exercises/06_05_exset_02}
 %\exsetinput{exercises/06_05_exset_03}
