--- a/exercises/04_03_ex_08.tex
+++ b/exercises/04_03_ex_08.tex
@@ -1,7 +1,7 @@
 {A rancher has 1000 feet of fencing in which to construct adjacent, equally sized rectangular pens. What dimensions should these pens have to maximize the enclosed area?
 
 \noindent\begin{minipage}{\linewidth}
-\centering\begin{tikzpicture}
+\centering\begin{tikzpicture}[scale=0.433]
 \draw [thick](0,0) rectangle (3,2);
 \draw [thick](1.5,0) -- (1.5,2);
 \end{tikzpicture}
