--- a/text/04_Optimization.tex
+++ b/text/04_Optimization.tex
@@ -116,8 +116,8 @@ By choosing $x$ as we did, we make the expression under the square root simple. 
 $$
 \begin{array}{ccccc}
 \text{Cost} &=&  \text{land cost} &+ & \text{water cost} \\
-						&	& \text{\$50}\times \text{land distance} &+& \text{\$130}\times \text{water distance} \\
-						&	& 50(5000-x) &+& 130\sqrt{x^2+1000^2}.\\
+						&=& \text{\$50}\times \text{land distance} &+& \text{\$130}\times \text{water distance} \\
+						&=& 50(5000-x) &+& 130\sqrt{x^2+1000^2}.\\
 \end{array}
 $$
 
@@ -137,7 +137,7 @@ Recognize that this is never undefined. Setting $c\primeskip'(x)=0$ and solving 
 (130^2-50^2)x^2 &= 50,000^2\\
 x^2 &= \frac{50,000^2}{130^2-50^2}\\
 x &= \frac{50,000}{\sqrt{130^2-50^2}}\\
-x & = \frac{50,000}{120} =416\frac23\approx 416.67.
+x & = \frac{50,000}{120} =\frac{1250}{3}\approx 416.67.
 \end{align*}
 
 Evaluating $c(x)$ at $x=416.67$ gives a cost of about \$370,000. The distance the power line is laid along land is $5000-416.67 = 4583.33$ ft., and the underwater distance is $\sqrt{416.67^2+1000^2} \approx 1083$ ft.
@@ -146,7 +146,7 @@ Evaluating $c(x)$ at $x=416.67$ gives a cost of about \$370,000. The distance th
 
 In the exercises you will see a variety of situations that require you to combine problem--solving skills with calculus. Focus on the \textit{process}; learn how to form equations from situations that can be manipulated into what you need. Eschew memorizing how to do ``this kind of problem'' as opposed to ``that kind of problem.'' Learning a process will benefit one far longer than memorizing a specific technique.
 
-The next section introduces our final application of the derivative: \textit{differentials}. Given $y=f(x)$, they offer a method of approximating the change in $y$ after $x$ changes by a small amount. 
+%The next section introduces our final application of the derivative: \textit{differentials}. Given $y=f(x)$, they offer a method of approximating the change in $y$ after $x$ changes by a small amount. 
 
 \printexercises{exercises/04_03_exercises}
 		
