--- a/exercises/04_03_exercises.tex
+++ b/exercises/04_03_exercises.tex
@@ -17,6 +17,7 @@
 \exinput{exercises/04_03_ex_15}
 \exinput{exercises/04_03_ex_16}
 \exinput{exercises/04_03_ex_17}
+\exinput{exercises/04_03_ex_18}
 %\printreview
 %\exinput{exercises/03_03_ex_24}
 %\exinput{exercises/03_03_ex_25}
