--- a/exercises/05_01_ex_39.tex
+++ b/exercises/05_01_ex_39.tex
@@ -1,4 +1,4 @@
-{This problem investigates why Theorem \ref{thm:indef_alg} states that $\ds \int \frac1x\ dx = \ln |x| + C$.
+{This problem investigates why Theorem \ref{thm:indef_alg} states that $\ds \int \frac1x\ dx = \ln |x| + C$.\label{exer:05_01_ex_39}
 \begin{enumerate}
 	\item		What is the domain of $y = \ln x$?
 	\item		Find $\frac{d}{dx}\big(\ln x\big)$. 
