--- a/exercises/05_01_exercises.tex
+++ b/exercises/05_01_exercises.tex
@@ -9,8 +9,9 @@
 \printproblems
 \exsetinput{exercises/05_01_exset_01}
 \exinput{exercises/05_01_ex_39}
+\exinput{exercises/05_01_ex_42}
 \exsetinput{exercises/05_01_exset_02}
-\ifthenelse{\boolean{printquestions}}{\columnbreak}{}
+%\ifthenelse{\boolean{printquestions}}{\columnbreak}{}
 \printreview
 \exinput{exercises/05_01_ex_40}
 \exinput{exercises/05_01_ex_41}
