--- a/exercises/05_01_exset_02.tex
+++ b/exercises/05_01_exset_02.tex
@@ -5,6 +5,7 @@
 \exinput{exercises/05_01_ex_30}
 \exinput{exercises/05_01_ex_31}
 \exinput{exercises/05_01_ex_32}
+\exinput{exercises/05_01_ex_43}
 \exinput{exercises/05_01_ex_33}
 \exinput{exercises/05_01_ex_34}
 \exinput{exercises/05_01_ex_35}
