--- a/text/04_Related_Rates.tex
+++ b/text/04_Related_Rates.tex
@@ -1,3 +1,5 @@
+In Chapter \ref{chapter:graphbehavior}, we learned how the first and second derivatives of a function influence its graph. In this chapter we explore other applications of the derivative.
+
 \section{Related Rates}\label{sec:related_rates}
 
 When two quantities are related by an equation, knowing the value of one quantity can determine the value of the other. For instance, the circumference and radius of a circle are related by $C=2\pi r$; knowing that $C = 6\pi$ in determines the radius must be 3 in.
