--- a/exercises/05_04_exset_07.tex
+++ b/exercises/05_04_exset_07.tex
@@ -5,3 +5,6 @@
 \exinput{exercises/05_04_ex_56}
 \exinput{exercises/05_04_ex_57}
 \exinput{exercises/05_04_ex_58}
+\exinput{exercises/05_04_ex_59}
+\exinput{exercises/05_04_ex_60}
+\exinput{exercises/05_04_ex_61}
