--- a/exercises/06_01_exercises.tex
+++ b/exercises/06_01_exercises.tex
@@ -10,5 +10,7 @@
 \exsetinput{exercises/06_01_exset_06}
 \exsetinput{exercises/06_01_exset_07}
 \exsetinput{exercises/06_01_exset_08}
+\exsetinput{exercises/06_01_exset_09}
+\exinput{exercises/06_01_ex_99}
 %\printreview
 %\exsetinput{exercises/05_04_exset_07}
