--- a/exercises/06_01_exset_01.tex
+++ b/exercises/06_01_exset_01.tex
@@ -12,3 +12,4 @@
 \exinput{exercises/06_01_ex_19}
 \exinput{exercises/06_01_ex_20}
 \exinput{exercises/06_01_ex_21}
+\exinput{exercises/06_01_ex_84}
