--- a/exercises/06_01_exset_02.tex
+++ b/exercises/06_01_exset_02.tex
@@ -9,3 +9,6 @@
 \exinput{exercises/06_01_ex_27}
 \exinput{exercises/06_01_ex_82}
 \exinput{exercises/06_01_ex_83}
+\exinput{exercises/06_01_ex_85}
+\exinput{exercises/06_01_ex_87}
+\exinput{exercises/06_01_ex_86}
