--- a/exercises/06_01_exset_06.tex
+++ b/exercises/06_01_exset_06.tex
@@ -9,4 +9,5 @@
 \exinput{exercises/06_01_ex_60}
 \exinput{exercises/06_01_ex_61}
 \exinput{exercises/06_01_ex_62}
+\exinput{exercises/06_01_ex_94}
 \exinput{exercises/06_01_ex_63}
