--- a/exercises/06_01_exset_07.tex
+++ b/exercises/06_01_exset_07.tex
@@ -15,6 +15,7 @@
 \exinput{exercises/06_01_ex_57}
 \exinput{exercises/06_01_ex_58}
 \exinput{exercises/06_01_ex_59}
+\exinput{exercises/06_01_ex_88}
 \exinput{exercises/06_01_ex_64}
 \exinput{exercises/06_01_ex_65}
 \exinput{exercises/06_01_ex_66}
