--- a/exercises/06_01_exset_08.tex
+++ b/exercises/06_01_exset_08.tex
@@ -8,3 +8,8 @@
 \exinput{exercises/06_01_ex_79}
 \exinput{exercises/06_01_ex_80}
 \exinput{exercises/06_01_ex_81}
+\exinput{exercises/06_01_ex_89}
+\exinput{exercises/06_01_ex_90}
+\exinput{exercises/06_01_ex_91}
+\exinput{exercises/06_01_ex_92}
+\exinput{exercises/06_01_ex_93}
