--- a/text/05_Riemann_Sums.tex
+++ b/text/05_Riemann_Sums.tex
@@ -90,7 +90,8 @@ $$ 1.\ \sum_{i=1}^6 a_i \qquad\qquad\qquad 2.\ \sum_{i=3}^7 (3a_i-4)\qquad\qquad
 %					\end{minipage}
 		\item	Note the starting value is different than 1:
 					\begin{align*}
-					\sum_{i=3}^7 a_i &= (3a_3-4)+(3a_4-4)+(3a_5-4)+(3a_6-4)+(3a_7-4) \\
+					\sum_{i=3}^7 (3a_i-4) &= (3a_3-4)+(3a_4-4)+(3a_5-4)+(3a_6-4)+(3a_7-4) \\
+&=(3\cdot5-4)+(3\cdot7-4)+(3\cdot9-4)+(3\cdot11-4)+(3\cdot13-4)\\
 														&= 11+17+23+29+35 \\
 														&= 115.
 					\end{align*}
