--- a/text/06_Partial_Fractions.tex
+++ b/text/06_Partial_Fractions.tex
@@ -108,7 +108,7 @@ $$\int\frac{1}{(x-1)(x+2)^2}\ dx = \frac19\ln|x-1| -\frac19\ln|x+2| +\frac1{3(x+
 %\enlargethispage{\baselineskip}
 \example{ex_pf4}{Integrating using partial fractions}{
 Use partial fraction decomposition to integrate $\ds \int \frac{x^3}{(x-5)(x+3)}\ dx$.}
-{Key Idea \ref{idea:partial_fraction} presumes that the degree of the numerator is less than the degree of the denominator. Since this is not the case here, we begin by using polynomial division to reduce the degree of the numerator.  We divide $x^3$ by $(x-5)(x+3)=x^2-2x-15$.  At each step, divide the leading terms.  We finish when the degree of the remainder is less than the divisor $x^2-2x-15$.
+{Key Idea \ref{idea:partial_fraction} presumes that the degree of the numerator is less than the degree of the denominator. Since this is not the case here, we begin by using polynomial division to reduce the degree of the numerator.  We divide $x^3$ by $(x-5)(x+3)=x^2-2x-15$.  At each step, divide the leading terms.  We finish when the degree of the remainder is less than the degree of the divisor $x^2-2x-15$.
 %Mike Joseph (1/29/2018) added this brief explanation and computation of the polynomial division.  The original text omitted the steps.
 $$
 \begin{array}{rlcccccccr}
