--- a/exercises/05_04_ex_58.tex
+++ b/exercises/05_04_ex_58.tex
@@ -1,5 +1,5 @@
 {$\ds F(x) = \int_{\ln x}^{e^x} \sin t\ dt$
 }
-{$F'(x) = e^x\sin (e^x) - 1/x\sin(\ln x)$
+{$\ds F'(x) = e^x\sin (e^x) - \frac1x \sin(\ln x)$
 }
 
