--- a/exercises/05_04_exset_03.tex
+++ b/exercises/05_04_exset_03.tex
@@ -6,4 +6,5 @@
 \exinput{exercises/05_04_ex_36}
 \exinput{exercises/05_04_ex_37}
 \exinput{exercises/05_04_ex_38}
+\exinput{exercises/05_04_ex_62}
 \exinput{exercises/05_04_ex_39}
