--- a/text/05_FTC.tex
+++ b/text/05_FTC.tex
@@ -92,9 +92,9 @@ Integrating a speed function gives a similar, though different, result. Speed is
 %Integrating a \textit{speed} function gives something different than displacement. If two objects both travel at the same speed along different paths, they will travel the same \textit{distance} though their \textit{displacements} will likely be different. For instance, one object could travel along a circle and the other along a straight line. Their ending points will be far different from each other, though they would have each traveled the same distance. The final conclusion: \textit{integrating a speed function gives distance traveled.}
 
 %Velocity is ``speed and direction,'' so by taking the direction information away, speed 
-As acceleration is the rate of velocity change, integrating an acceleration function gives total change in velocity. We do not have a simple term for this analogous to displacement. If $a(t) = 5$miles/h$^2$ and $t$ is measured in hours, then 
+As acceleration is the rate of velocity change, integrating an acceleration function gives total change in velocity. We do not have a simple term for this analogous to displacement. If $a(t) = 5 $miles/hr$^2$ and $t$ is measured in hours, then 
 $$\int_0^3 a(t)\ dt = 15$$
-means the velocity has increased by 15m/h from $t=0$ to $t=3$.
+means the velocity has increased by 15 mph from $t=0$ to $t=3$.
 \\
 
 \noindent\textbf{\large The Fundamental Theorem of Calculus and the Chain Rule}
@@ -144,7 +144,9 @@ $$\int_a^b f(x)\ dx - \int_a^b g(x)\ dx.$$ Properties of the definite integral a
 Find the area of the region enclosed by $y=x^2+x-5$ and $y=3x-2$.}
 {It will help to sketch these two functions, as done in Figure \ref{fig:ftc6}. 
 \mfigure{.3}{Sketching the region enclosed by $y=x^2+x-5$ and $y=3x-2$ in Example \ref{ex_ftc6}.}{fig:ftc6}{figures/figftc6}
-The region whose area we seek is completely bounded by these two functions; they seem to intersect at $x=-1$ and $x=3$. To check, set $x^2+x-5=3x-2$ and solve for $x$:
+The region whose area we seek is completely bounded by these two functions; they seem to intersect at $x=-1$ and $x=3$.\\
+
+To check, set $x^2+x-5=3x-2$ and solve for $x$:
 	\begin{align*} x^2+x-5 &= 3x-2 \\
 								(x^2+x-5) - (3x-2) &= 0\\
 								x^2-2x-3 &= 0\\
@@ -155,7 +157,7 @@ Following Theorem \ref{thm:areabtwncurves}, the area is
 	\begin{align*}\int_{-1}^3\big(3x-2 -(x^2+x-5)\big)\ dx &= \int_{-1}^3 (-x^2+2x+3)\ dx \\
 							&=\left.\left(-\frac13x^3+x^2+3x\right)\right|_{-1}^3 \\
 							&=-\frac13(27)+9+9-\left(\frac13+1-3\right)\\
-							&= 10\frac23 = 10.\overline{6}
+							&= \frac{32}{3} = 10.\overline{6}
 	\end{align*}
 \vskip-\baselineskip	
 }\\
