--- a/CalculusI.tex
+++ b/CalculusI.tex
@@ -339,7 +339,7 @@
 \cleardoublepage
 \addcontentsline{toc}{chapter}{\indexname}
 \printindex
-\includepdf[pages={897-902}]{Calculus.pdf}
+%\includepdf[pages={897-902}]{Calculus.pdf}
 
 \input{text/Inside_Cover_Of_The_Text_Material_Complete}
 
