--- a/exercises/06_03_exset_01.tex
+++ b/exercises/06_03_exset_01.tex
@@ -2,6 +2,7 @@
 {, evaluate the indefinite integral.}
 \exinput{exercises/06_03_ex_04}
 \exinput{exercises/06_03_ex_05}
+\exinput{exercises/06_03_ex_05a}
 \exinput{exercises/06_03_ex_06}
 \exinput{exercises/06_03_ex_07}
 \exinput{exercises/06_03_ex_08}
@@ -22,6 +23,7 @@
 \exinput{exercises/06_03_ex_21}
 \exinput{exercises/06_03_ex_22}
 \exinput{exercises/06_03_ex_23}
+\exinput{exercises/06_03_ex_34}
 \exinput{exercises/06_03_ex_24}
 \exinput{exercises/06_03_ex_25}
 \exinput{exercises/06_03_ex_26}
