--- a/text/06_Int_By_Parts.tex
+++ b/text/06_Int_By_Parts.tex
@@ -270,12 +270,12 @@ $$\int \ln x\ dx = x\ln{x} - x + C.$$
 $$\int \arctan x \,dx = x\arctan x - \int \frac x{1+x^2}\,dx.$$
 The integral on the right can be solved by substitution.  Taking $u=1+x^2$, we get $du=2x\,dx$.  The integral then becomes
 $$\int \arctan x \,dx = x\arctan x - \frac12\int \frac 1{u}\,du.$$
-The integral on the right evaluates to $\ln|u|+C$, which becomes $\ln(1+x^2)+C$.  Therefore, the answer is
+The integral on the right evaluates to $\ln|u|+C$, which becomes $\ln(1+x^2)+C$.  (We can drop the absolute value signs because $1+x^2$ is always positive.)  Therefore, the answer is
 $$\int \arctan x\ dx = x\arctan x - \ln(1+x^2) + C.$$
 \vskip-15pt
 }\\
 
-\clearpage
+%\clearpage
 \noindent\textbf{\large Substitution Before Integration}
 \vskip\baselineskip
 
