--- a/CalculusII.tex
+++ b/CalculusII.tex
@@ -302,17 +302,17 @@
 %
 
 
-%\qendheader
-%\eendgeometry
+\qendheader
+\eendgeometry
 %
-%\phantomsection
-%\cleardoublepage
-%\addcontentsline{toc}{chapter}{\indexname}
-%%\printindex
+\phantomsection
+\cleardoublepage
+\addcontentsline{toc}{chapter}{\indexname}
+\printindex
 %\includepdf[pages={863-868}]{Calculus.pdf}
 %
 %%\cleardoublepage
-%\input{text/Inside_Cover_Of_The_Text_Material_Complete}
+\input{text/Inside_Cover_Of_The_Text_Material_Complete}
 
 
 \end{document}
