--- a/CalculusIII.tex
+++ b/CalculusIII.tex
@@ -342,7 +342,7 @@
 \cleardoublepage
 \addcontentsline{toc}{chapter}{\indexname}
 %\printindex
-\includepdf[pages={863-868}]{Calculus.pdf}
+%\includepdf[pages={863-868}]{Calculus.pdf}
 
 %\cleardoublepage
 \input{text/Inside_Cover_Of_The_Text_Material_Complete}
