--- a/exercises/06_02_exercises.tex
+++ b/exercises/06_02_exercises.tex
@@ -7,5 +7,6 @@
 \exsetinput{exercises/06_02_exset_02}
 \exsetinput{exercises/06_02_exset_03}
 \exsetinput{exercises/06_02_exset_04}
+\exsetinput{exercises/06_02_exset_05}
 %\printreview
 %\exsetinput{exercises/05_04_exset_07}
